# shiruka

./: .gitignore  .gitmodules  .pdd  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle  checkstyle.xml  crowdin.yml  docker-compose.yml  entrypoint.sh  gradle.properties  pom.xml  settings.gradle  start.bat  start.sh
.github/: .kodiak.toml  FUNDING.yml  dependabot.yml
.github/workflows/: build-natives.yml  build.yml  codeql-analysis.yml  codeql.yml  crowdin.yml  publish.yml  release-drafter.yml  release.yml
.run/: Build the Project.run.xml  Dockerfile.run.xml  Start.run.xml  build.run.xml
crypto/src/: context.rs  encryption.rs  jni.rs  lib.rs
src/main/resources/: java.logger.properties  log4j2.component.properties  log4j2.xml
src/main/resources/lang/: crowdin.yml  language_names.json  languages.json  source.lang  source.properties
src/main/resources/lang/shiruka/: de_DE.properties  en_GB.properties  en_US.lang  en_US.properties  fr_CA.properties  fr_FR.properties  it_IT.properties  ja_JP.properties  ko_KR.properties  nb_NO.properties  nl_NL.properties  pt_PT.properties  ru_RU.properties  sv_SE.properties  tr_TR.properties  uk_UA.properties
src/main/resources/lang/vanilla/: bg_BG.properties  cs_CZ.properties  da_DK.properties  de_DE.properties  el_GR.properties  en_GB.properties  en_US.properties  es_ES.properties  es_MX.properties  fi_FI.properties  fr_CA.properties  fr_FR.properties  hu_HU.properties  id_ID.properties  it_IT.properties  ja_JP.properties  ko_KR.properties  nb_NO.properties  (+11 more)
src/main/rust/: compression.rs  jni.rs
(+657 files in other folders)
