[package]
name = "shiruka"
version = "1.0.0"
authors = ["Shiru ka"]
edition = "2018"

[dependencies]
jni = "0.18.0"
cfb8 = "0.6.0"
aesni = "0.10.0"
sha2 = "0.9.2"
byteorder = "1.3.4"
elapsed = "0.1.2"
libdeflater = "0.7.1"

[lib]
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
